force-app/main/default/objects/TT_Initiative__c/TT_Initiative__c.object-meta.xml
<CustomObject>
    <description>An initiative is a large body of work or broad objective too big to deliver or estimate as a single unit, so it gets broken into smaller, actionable pieces (usually features and stories, sometimes tasks) that can be scheduled, worked on, and completed.</description>
    <label>TT Initiative</label>
    <nameField>
        <displayFormat>Int-{000}</displayFormat>
        <label>TT Initiative Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>