force-app/main/default/objects/TT_Initiative__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client for which the initiative is being worked</description>
    <inlineHelpText>Client for which the initiative is being worked</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TT Initiatives</relationshipLabel>
    <relationshipName>TT_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>