force-app/main/default/objects/TT_Initiative__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <description>Date work actually ended for the initiative</description>
    <inlineHelpText>Date work actually ended for the initiative</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>