force-app/main/default/objects/TT_Initiative__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>Date work was actually started for the initiative</description>
    <inlineHelpText>Date work was actually started for the initiative</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>