force-app/main/default/objects/TT_Initiative__c/fields/Definition_of_Done__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Done__c</fullName>
    <description>The conditions that must be met for this Initiative to be considered finished and releasable</description>
    <inlineHelpText>The conditions that must be met for this Initiative to be considered finished and releasable</inlineHelpText>
    <label>Definition of Done</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>