force-app/main/default/objects/TT_Initiative__c/fields/Initiative_Name__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Name__c</fullName>
    <description>Short reference for an initiative</description>
    <inlineHelpText>Short reference for an initiative</inlineHelpText>
    <label>Initiative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>