force-app/main/default/objects/TT_Initiative__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person accountable for the initiative</description>
    <inlineHelpText>Person accountable for the initiative</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TT Initiatives</relationshipLabel>
    <relationshipName>TT_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>