force-app/main/default/objects/TT_Initiative__c/fields/Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completed__c</fullName>
    <formula>Total_Completed_Features__c / Total_Features__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>