force-app/main/default/objects/TT_Initiative__c/fields/Total_Completed_Features__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Features__c</fullName>
    <label>Total Completed Features</label>
    <summaryFilterItems>
        <field>TT_Feature__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>TT_Feature__c.TT_Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>