force-app/main/default/objects/TT_Initiative__c/fields/Total_Features__c.field-meta.xml
<CustomField>
    <fullName>Total_Features__c</fullName>
    <label>Total Features</label>
    <summaryForeignKey>TT_Feature__c.TT_Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>